# c-cplusplus

./: CMakeLists.txt  README.md  run.bat
src/: CMakeLists.txt  common.h
src/FileReadWriteInC/: CMakeLists.txt  FileReadWriteInC.cpp
src/FileReadWriteInCPlus/: CMakeLists.txt  FileReadWriteInCPlus.cpp  commonH.h  example.cpp  example.h
src/align/: CMakeLists.txt  main.cpp
src/cplusplus11141720/: CMakeLists.txt  build.bat  main.cpp  rvalue.hpp
src/design pattern/: CMakeLists.txt
src/design pattern/abstractFactoryModel/: AbstractProduct.cpp  AbstractProduct.h  CMakeLists.txt  SimpleFactory.h  main.cpp
src/design pattern/adapter/: CMakeLists.txt  main.cpp
src/design pattern/bridge/: CMakeLists.txt  main.cpp
src/design pattern/builder/: CMakeLists.txt  main.cpp
src/design pattern/chainOfResponsibility/: CMakeLists.txt  main.cpp
src/design pattern/command/: CMakeLists.txt  main.cpp
src/design pattern/composite/: CMakeLists.txt  main.cpp
src/design pattern/decorator/: CMakeLists.txt  main.cpp
src/design pattern/facade/: CMakeLists.txt  main.cpp
src/design pattern/factoryMethod/: CMakeLists.txt  SimpleFactory.cpp  SimpleFactory.h  main.cpp
src/design pattern/flyweight/: CMakeLists.txt  main.cpp
src/design pattern/interpreter/: CMakeLists.txt  main.cpp
src/design pattern/iterator/: CMakeLists.txt  main.cpp
src/design pattern/mediator/: CMakeLists.txt  main.cpp
src/design pattern/memento/: CMakeLists.txt  main.cpp
src/design pattern/modulemanager_unknown/: CModuleManager.cpp  CModuleManager.h  CTest2Module.cpp  CTest2Module.h  CTestModule.cpp  CTestModule.h  main.cpp
src/design pattern/nullObject/: CMakeLists.txt
src/design pattern/objectPool/: CMakeLists.txt  main.cpp
src/design pattern/observer/: CMakeLists.txt  main.cpp
src/design pattern/privateClassData/: CMakeLists.txt
src/design pattern/prototype/: CMakeLists.txt  main.cpp
src/design pattern/proxy/: CMakeLists.txt  main.cpp
src/design pattern/simpleFactoryModel_unknown/: AbstractProduct.h  SimpleFactory.cpp  SimpleFactory.h  main.cpp
src/design pattern/singleton/: CMakeLists.txt  main.cpp
src/design pattern/state/: CMakeLists.txt  main.cpp
src/design pattern/strategy/: CMakeLists.txt  main.cpp
src/design pattern/templateMethod/: CMakeLists.txt  main.cpp
src/design pattern/visitor/: CMakeLists.txt  main.cpp
src/format/: CMakeLists.txt  func.h  main.cpp  xml.txt
src/lib_json/: CMakeLists.txt  json  lib_json.pri
src/lua/: CMakeLists.txt  main.cpp  test.lua
src/lua-build/: CMakeLists.txt  README.txt  make&install.bat
src/lua-build/lua-5.3.5/src/: CMakeLists.txt
src/lua/lib/: lua.lib
src/mvc-demo/: CMakeLists.txt  common.h  controller.cpp  controller.h  main.cpp  model.cpp  model.h  view.cpp  view.h
src/others/: CMakeLists.txt  main.cpp  others.h  testMemcpy.cpp
src/pack_unpack/: make&build.bat
src/pack_unpack/msgpack-3.2.0/: main.cpp
src/pack_unpack/msgpack-3.2.0/vs2015_x64_release/: CMakeLists.txt  msgpack.lib
src/pack_unpack/msgpack-3.2.0/vs2015_x86_release/: CMakeLists.txt  msgpack.lib
src/pack_unpack/protobuf-2.6.1/: main.cpp  msg.proto
src/pack_unpack/protobuf-2.6.1/vs2015_x64_release/: CMakeLists.txt  msg.pb.h
src/pack_unpack/protobuf-2.6.1/vs2015_x86_release/: CMakeLists.txt  msg.pb.cc
src/pack_unpack/protobuf-3.11.0/: main.cpp  msg.proto  protoc.bat
src/pack_unpack/protobuf-3.11.0/vs2015_x64_release/: CMakeLists.txt  msg.pb.cc
src/pack_unpack/protobuf-3.11.0/vs2015_x86_release/: CMakeLists.txt  msg.pb.h
src/producer_consumer/: CMakeLists.txt  TConsumerProducer.h  main.cpp
src/protobuf-2.6.1/: README.txt  build_protobuf_2.6.1.bat
src/protobuf-3.11.0/: Makefile.in  README.txt  build_protobuf_3.11.0.bat  configure  make&install.bat
src/protobuf-3.11.0/src/: Makefile.in
src/socket/socket_linux/client/: client.c
src/socket/socket_linux/server/: epoll.cpp  server.c
src/socket/socket_win/: CMakeLists.txt
src/socket/socket_win/client/: CMakeLists.txt
src/socket/socket_win/server/: main.cpp
src/socket/socket_win/server_select/: CMakeLists.txt  server2.cpp
src/socket/socket_win/src_client/: main.cpp
src/socket/socket_win/src_server/: CMakeLists.txt
src/sort/: CMakeLists.txt  bubble.cpp  insert.cpp  main.cpp  quick.cpp  shell.cpp  sort.h
src/sort of vector list map/: CMakeLists.txt  main.cpp
src/thread/: CMakeLists.txt  atomic.hpp  condition_variable.hpp  future.hpp  lock.hpp  lock_guard.hpp  main.cpp  recursive_mutex.hpp  try_lock.hpp  try_lock_for.hpp  try_lock_until.hpp  unique_lock.hpp
third_part/: boost.bat  boost.sh  curl.bat  curl.sh  doxygen.sh  jsoncpp.bat  jsoncpp.sh  msgpack.bat  msgpack.sh  msgpack_1_4_0.bat  mysql.bat  mysql.sh  openssl.bat  openssl.sh
