CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

SET(PORJNAME "msgpack_3.2.0_x86")

PROJECT(${PORJNAME} CXX)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../include)

LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

ADD_EXECUTABLE(${PORJNAME} ${CMAKE_CURRENT_SOURCE_DIR}/../main.cpp)

target_link_libraries(${PORJNAME} msgpack.lib)

SET_TARGET_PROPERTIES(${PORJNAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/../../bin )

INSTALL(TARGETS ${PORJNAME} CONFIGURATIONS Release  DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../bin)
