CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

SET(PORJNAME "protobuf_2.6.1_x86")

PROJECT(${PORJNAME} CXX)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../src)

LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

ADD_EXECUTABLE(${PORJNAME} ${CMAKE_CURRENT_SOURCE_DIR}/../main.cpp msg.pb.cc)

target_link_libraries(${PORJNAME} libprotobuf.lib)

SET_TARGET_PROPERTIES(${PORJNAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/../../bin )

INSTALL(TARGETS ${PORJNAME} CONFIGURATIONS Release  DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../bin)
